removed gitpod.yml and dockerfile

--- a/samples/tutorials/Data passing in python components.ipynb
+++ b/samples/tutorials/Data passing in python components.ipynb
@@ -21,12 +21,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Put your KFP cluster endpoint URL here if working from GCP notebooks (or local notebooks). ('https://xxxxx.notebooks.googleusercontent.com/')\n",
-    "kfp_endpoint='https://XXXXX.{pipelines|notebooks}.googleusercontent.com/'"
+    "kfp_endpoint='https://5a548e08728b9971-dot-us-central2.pipelines.googleusercontent.com/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Go to the following link in your browser:\n",
+      "\n",
+      "    https://accounts.google.com/o/oauth2/auth?client_id=32555940559.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=openid+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcloud-platform+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fappengine.admin+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcompute+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Faccounts.reauth&code_challenge=V56tvJthbW0qMrIFFi2AyPw5oGEvHTumjfDhpKQ8VO4&code_challenge_method=S256&access_type=offline&response_type=code&prompt=select_account\n",
+      "\n",
+      "\n",
+      "Enter verification code: ^C\n",
+      "\n",
+      "\n",
+      "Command killed by keyboard interrupt\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!gcloud auth login \"anton.plesner@wunderman.com\" --no-launch-browser"
    ]
   },
   {
@@ -41,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +76,23 @@
     "import kfp\n",
     "from kfp.components import InputPath, InputTextFile, OutputPath, OutputTextFile\n",
     "from kfp.components import func_to_container_op"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gitpod\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "gcloud iam service-accounts keys create [FILE_NAME].json --iam-account [NAME]@[PROJECT_ID].iam.gserviceaccount.com"
    ]
   },
   {
@@ -397,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
